@@ -193,23 +193,23 @@ void GMT_explain_options (struct GMT_CTRL *GMT, char *options)
 			GMT_message (GMT, "\t     For time axes, several units are recognized:\n");
 			GMT_message (GMT, "\t       Y: year - plot using all 4 digits.\n");
 			GMT_message (GMT, "\t       y: year - plot only last 2 digits.\n");
-			GMT_message (GMT, "\t       O: month - format annotation according to format_date_map.\n");
+			GMT_message (GMT, "\t       O: month - format annotation according to FORMAT_DATE_MAP.\n");
 			GMT_message (GMT, "\t       o: month - plot as 2-digit integer (1-12).\n");
-			GMT_message (GMT, "\t       U: ISO week - format annotation according to format_date_map.\n");
+			GMT_message (GMT, "\t       U: ISO week - format annotation according to FORMAT_DATE_MAP.\n");
 			GMT_message (GMT, "\t       u: ISO week - plot as 2-digit integer (1-53).\n");
 			GMT_message (GMT, "\t       r: Gregorian week - 7-day stride from chosen start of week (%s).\n",
 			             GMT_weekdays[GMT->current.setting.time_week_start]);
-			GMT_message (GMT, "\t       K: ISO weekday - format annotation according to format_date_map.\n");
+			GMT_message (GMT, "\t       K: ISO weekday - format annotation according to FORMAT_DATE_MAP.\n");
 			GMT_message (GMT, "\t       k: weekday - plot name of weekdays in selected language [%s].\n", GMT->current.setting.time_language);
-			GMT_message (GMT, "\t       D: day - format annotation according to format_date_map, which also determines whether\n");
+			GMT_message (GMT, "\t       D: day - format annotation according to FORMAT_DATE_MAP, which also determines whether\n");
 			GMT_message (GMT, "\t                we should plot day of month (1-31) or day of year (1-366).\n");
 			GMT_message (GMT, "\t       d: day - plot as 2- (day of month) or 3- (day of year) integer.\n");
 			GMT_message (GMT, "\t       R: Same as d but annotates from start of Gregorian week.\n");
-			GMT_message (GMT, "\t       H: hour - format annotation according to format_clock_map.\n");
+			GMT_message (GMT, "\t       H: hour - format annotation according to FORMAT_CLOCK_MAP.\n");
 			GMT_message (GMT, "\t       h: hour - plot as 2-digit integer (0-23).\n");
-			GMT_message (GMT, "\t       M: minute - format annotation according to format_clock_map.\n");
+			GMT_message (GMT, "\t       M: minute - format annotation according to FORMAT_CLOCK_MAP.\n");
 			GMT_message (GMT, "\t       m: minute - plot as 2-digit integer (0-59).\n");
-			GMT_message (GMT, "\t       S: second - format annotation according to format_clock_map.\n");
+			GMT_message (GMT, "\t       S: second - format annotation according to FORMAT_CLOCK_MAP.\n");
 			GMT_message (GMT, "\t       s: second - plot as 2-digit integer (0-59; 60-61 if leap seconds are enabled).\n");
 			GMT_message (GMT, "\t     Cartesian axes takes no units.\n");
 			GMT_message (GMT, "\t     When <stride> is omitted, a reasonable value will be determined automatically, e.g., -Bafg.\n");
